--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <meta property="og:url" content="https://sneakerplug.co.in/">
 <meta property="og:title" content="DRIPIFY India | Authentic Sneakers &amp; Streetwear in India">
 <meta property="og:type" content="website">
-<meta property="og:description" content="DRIPIFY India - India&#39;s premier Streetwear and Sneaker marketplace. Shop Authentic Limited Edition Air Jordans, Yeezy, Dunks, Fear of God Essentials and Drew House online in India. Fast Shipping. 100% Authentic."><meta property="og:image" content="http://sneakerplug.co.in/cdn/shop/files/2-1-13_6f673a79-01ee-48a3-a966-80d198b38ab8_1200x1200.png?v=1690829474">
+<meta property="og:description" content="DRIPIFY India - India&#39;s premier Streetwear and Sneaker marketplace. Shop Authentic Limited Edition Air Jordans, Yeezy, Dunks, Fear of God Essentials and Drew House online in India. Fast Shipping. 100% Authentic.">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="628"><meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="DRIPIFY India | Authentic Sneakers &amp; Streetwear in India">
