--- a/product.html
+++ b/product.html
@@ -3368,7 +3368,7 @@ for (var attr in meta) {
                             <span class="with-icon__beside">RETURNS</span>
                           </div></summary>
       <div class="cc-accordion-item__panel">
-        <div class="cc-accordion-item__content rte cf"><p>All sales with Sneaker Plug India are final.</p><p>If you have any questions or concerns with regard to sizing or condition of a specific product on our site, please&nbsp;<a href="https://sneakerplug.co.in/pages/contact" title="https://sneakerplug.co.in/pages/contact">contact us</a>&nbsp;before purchasing.</p></div>
+        <div class="cc-accordion-item__content rte cf"><p>All sales with Dripify are final.</p><p>If you have any questions or concerns with regard to sizing or condition of a specific product on our site, please&nbsp;<a href="https://sneakerplug.co.in/pages/contact" title="https://sneakerplug.co.in/pages/contact">contact us</a>&nbsp;before purchasing.</p></div>
       </div>
     </details>
     </div>
