--- a/404.html
+++ b/404.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-	
-  <title>CodePen - Simple 404 error page</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="./404.css">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
 
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<div class="container">
-	<h1>An error as occured.</h1>
-	<h1> <span class="ascii">(╯°□°）╯︵ ┻━┻</span></h1>
-	<a href="#">Go back</a>
-</div>
-<!-- partial -->
-  
-</body>
+    <title>not mojmsti</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"
+    />
+    <link rel="stylesheet" href="./404.css" />
+  </head>
+  <body>
+    <!-- partial:index.partial.html -->
+    <div class="container">
+      <h1>An error as occured.</h1>
+      <h1><span class="ascii">(╯°□°）╯︵ ┻━┻</span></h1>
+      <a href="#">Go back</a>
+    </div>
+    <!-- partial -->
+  </body>
 </html>
