--- a/index.html
+++ b/index.html
@@ -2061,7 +2061,8 @@ for (var attr in meta) {
 
       <div class="logo-area__middle logo-area__middle--logo-image">
         <div class="logo-area__middle__inner">
-          <div class="logo"><h1 class="logo__h1"><a class="logo__link" href="/" title="DRIPIFY India">
+          <div style="    padding-top: 30px;
+    padding-bottom: 20px;" class="logo"><h1 class="logo__h1"><a class="logo__link" href="/" title="DRIPIFY India">
           <!---->
           <a style="font-weight:bolder; font-size: 30px;" href="/" class="header__logo__link">
           DRIPIFY
@@ -2246,12 +2247,12 @@ for (var attr in meta) {
 
           
             <div class="rimage-outer-wrapper rimage-background lazyload--manual mobile-only fade-in"
-                 data-bgset="https://wallpaperaccess.com/full/2814303.jpg"
+                 data-bgset="https://wallpaperset.com/w/full/5/e/9/186924.jpg"
                  data-sizes="auto"
                  data-parent-fit="cover"
                  style="background-position: 50.0% 50.0%"><noscript>
                 <div class="rimage-wrapper" style="padding-top:118.31634330812233%">
-                  <img src="https://wallpaperaccess.com/full/2814303.jpg" alt="" class="rimage__image">
+                  <img src="https://wallpaperset.com/w/full/5/e/9/186924.jpg" alt="" class="rimage__image">
                 </div>
               </noscript>
             </div>
