--- a/index.html
+++ b/index.html
@@ -2238,7 +2238,7 @@ for (var attr in meta) {
           font-size: 84px;
         }}
     </style>
-<div class="slideshow slideshow--navigation-dots slick-slider-overlay-dots-desktop slick-slider-overlay-dots" data-transition="zoom" data-autoplay="true" data-autoplay-speed="20" data-navigation="dots"><div class="slide slide-1 height--full image-overlay image-overlay--bg-full image-overlay--bg-shadow " ><a class="image-overlay__image-link" href="/collections/yeezy-slides"><div class="rimage-background-wrapper lazyload--placeholder desktop-only">
+<div class="slideshow slideshow--navigation-dots slick-slider-overlay-dots-desktop slick-slider-overlay-dots" data-transition="zoom" data-autoplay="true" data-autoplay-speed="20" data-navigation="dots"><div class="slide slide-1 height--full image-overlay image-overlay--bg-full image-overlay--bg-shadow " ><a class="image-overlay__image-link" href="./products?q=Nike"><div class="rimage-background-wrapper lazyload--placeholder desktop-only">
             <div class="rimage-outer-wrapper rimage-background lazyload--manual fade-in"
                 data-bgset="./495751.jpg"
                 data-sizes="auto"
@@ -2290,7 +2290,7 @@ for (var attr in meta) {
           
 </a></div>
 
-<div class="slide slide-3 height--full image-overlay image-overlay--bg-full image-overlay--bg-shadow " ><a class="image-overlay__image-link" href="/collections/essentials"><div class="rimage-background-wrapper lazyload--placeholder desktop-only">
+<div class="slide slide-3 height--full image-overlay image-overlay--bg-full image-overlay--bg-shadow " ><a class="image-overlay__image-link" href="./products?q=Adidas"><div class="rimage-background-wrapper lazyload--placeholder desktop-only">
             <div class="rimage-outer-wrapper rimage-background lazyload--manual fade-in"
                 data-bgset="./bg1.png"
                 data-sizes="auto"
