--- a/product.html
+++ b/product.html
@@ -2230,7 +2230,7 @@ for (var attr in meta) {
 
   
 <li class="navigation__item">
-      <a href="/collections/care" class="navigation__link" >CONTACT US</a>
+      <a href="https://wa.me/919560733719" class="navigation__link" >CONTACT US</a>
 
       
     </li>
