--- a/products.html
+++ b/products.html
@@ -2163,7 +2163,7 @@ for (var attr in meta) {
 
   
 <li class="navigation__item">
-      <a href="/collections/care" class="navigation__link" >CONTACT US</a>
+      <a href="https://wa.me/919560733719" class="navigation__link" >CONTACT US</a>
 
       
     </li>
